[package]
name = "meeters"
description = "Small Linux app indicator that will show meeting notifications and allow one click conference joining"
version = "1.1.0"
authors = ["Boris Terzic <boris@terzic.be>"]
edition = "2018"
repository = "https://github.com/aggregat4/meeters/"
homepage = "https://github.com/aggregat4/meeters/"
license = "Apache-2.0"
include = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libappindicator = "0.5.2"
gtk = "0.9.2"
glib = "0.10.3"
ureq = "2.1.0"
ical = "0.7.0"
property = "0.3.3"
chrono = "0.4.19"
chrono-tz = "0.5.3"
rrule = "0.5.5"
regex ="1"
lazy_static = "1.4.0"
directories = "3.0.1"
dotenv = "0.15.0"
maplit = "1.0.2"
roxmltree = "0.14.0"
notify-rust = "4.3.0"
multimap = "0.8.3"
