[package]
name = "meeters"
description = "Small Linux app indicator that will show meeting notifications and allow one click conference joining"
version = "1.4.0"
authors = ["Boris Terzic <boris@terzic.be>"]
edition = "2018"
repository = "https://github.com/aggregat4/meeters/"
homepage = "https://github.com/aggregat4/meeters/"
license = "Apache-2.0"
include = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libappindicator = "0.9.0"
gtk = "0.18.2"
glib = "0.18.2"
ureq = "3.0.10"
ical = "0.11.0"
property = "0.3.3"
chrono = "0.4.19"
chrono-tz = "0.5.3"
# rrule = "0.5.5"
rrule = { git = "https://github.com/aggregat4/rust-rrule", branch = "rrule-0.5" }
regex ="1"
lazy_static = "1.4.0"
directories = "6.0.0"
dotenvy = "0.15.4"
maplit = "1.0.2"
roxmltree = "0.20.0"
notify-rust = "4.5.8"
multimap = "0.10.0"
either = "1.6.1"
# D-Bus dependencies
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
