[package]
name = "meeters"
description = "Small Linux app indicator that will show meeting notifications and allow one click conference joining"
version = "1.7.0"
authors = ["Boris Terzic <boris@terzic.be>"]
edition = "2021"
repository = "https://github.com/aggregat4/meeters/"
homepage = "https://github.com/aggregat4/meeters/"
license = "Apache-2.0"
include = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
dbus = "0.9"
dbus-crossroads = "0.5"
directories = "6.0"
dotenvy = "0.15"
either = "1.8"
glib = "0.18"
gtk = "0.18"
ical = "0.11"
lazy_static = "1.4"
libappindicator = "0.9"
maplit = "1.0"
multimap = "0.10"
notify-rust = { version = "4.5", default-features = false, features = ["dbus"] }
property = "0.3"
regex = "1.6"
roxmltree = "0.20"
rrule = { git = "https://github.com/aggregat4/rust-rrule", branch = "rrule-0.5" }
ureq = "3.0"
